--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -190,6 +190,11 @@ jobs:
         tar -xzvf ivshmem.tar.gz
         cd LGIdd
         makensis -DBUILD_32BIT -DIVSHMEM installer.nsi
+    - name: Upload IDD installer
+      uses: actions/upload-artifact@v3
+      with:
+        name: looking-glass-idd-installer
+        path: idd/x64/Release/LGIdd/looking-glass-idd-setup.exe
 
   obs:
     runs-on: ubuntu-latest
